Adjust for Java 11